Fix issues on mobile

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -142,7 +142,7 @@ nav > a.prev, nav > a.next {
         width: 100% !important;
         font-family: 'Inconsolata', sans-serif;
         font-weight: 400;
-        font-size: 0.8em;
+        font-size: 0.9em;
         letter-spacing: 0.008em;
         word-spacing: 0.1em;
         line-height: 1.4em;
@@ -152,6 +152,11 @@ nav > a.prev, nav > a.next {
         padding-top: 10px;
         padding-left: 5px;
         margin-bottom: 0px;
+    }
+
+    .post-content pre code {
+        font-weight: 300;
+        font-size: 0.8em;
     }
 
     article.post-entry:first-of-type {
